<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_auto"
            android:icon="@drawable/ic_baseline_directions_car_24"
            android:title="@string/menu_auto" />
        <item
            android:id="@+id/nav_sportgoods"
            android:icon="@drawable/ic_sports_tennis_24"
            android:title="@string/menu_sportgoods" />

        <item
            android:id="@+id/nav_accessories"
            android:icon="@drawable/ic_tablet_android_24"
            android:title="@string/menu_tel" />

        <item
            android:id="@+id/nav_electronics"
            android:icon="@drawable/ic_tv_24"
            android:title="@string/menu_Electronics" />
        <item
            android:id="@+id/nav_trucks"
            android:icon="@drawable/ic_tv_24"
            android:title="@string/menu_truck" />
        <item
            android:id="@+id/nav_plants"
            android:icon="@drawable/ic_tv_24"
            android:title="@string/menu_plants" />
        <item
            android:id="@+id/nav_appliances"
            android:icon="@drawable/ic_baseline_laptop_chromebook_24"
            android:title="@string/menu_Appliances" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_24"
            android:title="@string/menu_share" />
    </group>
</menu>